# GravitySimulator

./: CMakeLists.txt  GraviSim.sln  README.md
GraviSim/: !!!!.sim  2.sim  GraviSim.vcxproj  GraviSim.vcxproj.filters  OOO.sim  Object.cpp  Object.h  ParticlesSystem.cpp  ParticlesSystem.h  Save.h  SimpleBody.cpp  SimpleBody.h  Simulation.cpp  Simulation.h  Source.cpp  SquareSmall.sim  aa.sim  boom.sim  circle.sim  er.sim  gg.sim  ggs.sim  imgui.ini  mn.sim  settings.ini  shell_3.sim  square.sim  squareBIG.sim  t.sim  test.sim  test1.sim  test3.sim  testshell.sim
GraviSim/lib/imgui_file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
GraviSim/saves/: Solar System.sim  Solar System.wrld  default.sim  default.wrld  dfd.sim  gg.wrld  many.wrld  moon.sim  moon.wrld  moon2.wrld  o.wrld  saving_system_test.sim  test1.wrld
GraviSim/src/: Console.cpp  Console.h  HUD.cpp  Object.cpp  Object.h  ParticleSources.h  ParticlesSystem.cpp  ParticlesSystem.h  Physics.cpp  Physics.h  Save.cpp  Save.h  Simulation.cpp  Simulation.h  Source.cpp
GraviSim/worlds/: 45.wrld  Many Objects.wrld  Stars collapse.wrld  gg.wrld  gg4.wrld
include/: HUD.hpp  ParticleSources.hpp  ParticlesSystem.hpp  Physics.hpp  Save.hpp  Simulation.hpp  VectorMath.hpp
src/: CMakeLists.txt  Console.cpp  HUD.cpp  Object.cpp  ParticlesSystem.cpp  Physics.cpp  Save.cpp  Simulation.cpp  main.cpp
